<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home"
            android:textColor="@android:color/white"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_simulation"
            android:icon="@drawable/ic_simulate"
            android:textColor="@android:color/white"
            android:title="@string/simulation"/>

    <item
            android:id="@+id/navigation_news"
            android:icon="@drawable/ic_news"
            android:textColor="@android:color/white"
            android:title="@string/news"/>

    <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_settings"
            android:textColor="@android:color/white"
            android:title="@string/settings"/>

</menu>