<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.covidhotspots.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/navigation_news"
            android:name="com.example.covidhotspots.ui.news.NewsFragment"
            android:label="@string/news"
            tools:layout="@layout/fragment_news"/>

    <fragment
            android:id="@+id/navigation_settings"
            android:name="com.example.covidhotspots.ui.settings.SettingsFragment"
            android:label="@string/settings"
            tools:layout="@layout/fragment_settings"/>

    <fragment
            android:id="@+id/navigation_simulation"
            android:name="com.example.covidhotspots.ui.simulation.SimulationFragment"
            android:label="@string/simulation"
            tools:layout="@layout/fragment_simulation"/>
</navigation>